--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,18 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    margin : 0;
+    padding : 0;
 }
+@font-face {
+    font-family: "bitter-rose";
+    src: url("../public/fonts/bitter-rose.otf");
+  }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@font-face {
+    font-family: "chillax";
+    src: url("../public/fonts/Chillax-Medium.otf");
 }
